@@ -41,4 +41,5 @@ public interface GalleryCommCapabilities {
 	public static final int CAPA_MOVE_ALBUM = 10;
 	public static final int CAPA_FETCH_ALBUMS_TOO = 11;
 	public static final int CAPA_FETCH_NON_WRITEABLE_ALBUMS = 12;
+	public static final int CAPA_FETCH_HONORS_HIDDEN = 13;
 }
