@@ -28,7 +28,6 @@ MainFrame.noTitleHeader = <unsaved>
 MainFrame.OK_toSaveBeforeClose = Save the current file before closing?
 MainFrame.menuNew  = New
 MainFrame.menuFile = File
-MainFrame.menuOpen = Open...
 MainFrame.menuSave = Save...
 MainFrame.menuSaveAs = Save As...
 MainFrame.menuClose = Close
@@ -348,7 +347,7 @@ NewAlbum.title = New Album
 NewAlbum.rootAlbmTitle = Gallery main page
 NewAlbum.cancel = Cancel
 NewAlbum.albmNameTip = What do you want to name this album? The name cannot contain any \
-			    of the following characters: \\ / * ? \" \' & \\u  | . + # or spaces. \
+			    of the following characters: \\ / * ? " ' & \\u  | . + # or spaces. \
 			    Those characters will be ignored in your new album name.
 NewAlbum.OK = OK
 NewAlbum.createAlbm = Creating a new album on Gallery {0}
@@ -373,7 +372,6 @@ PictInspec.Album = Album
 PictInspec.Caption = Caption
 PictInspec.Move = Move
 PictInspec.Size = Size
-PictInspec.Delete = Delete
 PictInspec.upBtnTip = Move selected picture up
 PictInspec.upBtn = Move up
 PictInspec.dnBtnTip = Move selected picture down
