@@ -1,3 +1,8 @@
+2004-04-12  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b10)
+
+	* Parentheses are invalid in album names.
+	* GR now honors hidden images and read permissions for albums.
+
 2004-03-25  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b9)
 
 	* On Java 1.4.2 and later, reading proxy from Java plugin in
